--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -220,6 +220,9 @@
            <property name="flat">
             <bool>true</bool>
            </property>
+           <property name="themeID" stdset="0">
+            <string notr="true">configIconSmall</string>
+           </property>
           </widget>
          </item>
          <item>
@@ -594,6 +597,9 @@
    <property name="text">
     <string>Add</string>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">addIconSmall</string>
+   </property>
   </action>
   <action name="actionAddSource">
    <property name="icon">
@@ -602,6 +608,9 @@
    </property>
    <property name="text">
     <string>Add</string>
+   </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">addIconSmall</string>
    </property>
   </action>
   <action name="actionRemoveScene">
@@ -618,6 +627,9 @@
    <property name="shortcutContext">
     <enum>Qt::WidgetWithChildrenShortcut</enum>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">removeIconSmall</string>
+   </property>
   </action>
   <action name="actionRemoveSource">
    <property name="icon">
@@ -633,6 +645,9 @@
    <property name="shortcutContext">
     <enum>Qt::WidgetWithChildrenShortcut</enum>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">removeIconSmall</string>
+   </property>
   </action>
   <action name="actionSceneProperties">
    <property name="enabled">
@@ -644,6 +659,9 @@
    </property>
    <property name="text">
     <string>Properties</string>
+   </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">propertiesIconSmall</string>
    </property>
   </action>
   <action name="actionSourceProperties">
@@ -657,6 +675,9 @@
    <property name="text">
     <string>Properties</string>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">propertiesIconSmall</string>
+   </property>
   </action>
   <action name="actionSceneUp">
    <property name="enabled">
@@ -668,6 +689,9 @@
    </property>
    <property name="text">
     <string>Basic.Main.MoveUp</string>
+   </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">upArrowIconSmall</string>
    </property>
   </action>
   <action name="actionSourceUp">
@@ -681,6 +705,9 @@
    <property name="text">
     <string>MoveUp</string>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">upArrowIconSmall</string>
+   </property>
   </action>
   <action name="actionSceneDown">
    <property name="enabled">
@@ -693,6 +720,9 @@
    <property name="text">
     <string>Basic.Main.MoveDown</string>
    </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">downArrowIconSmall</string>
+   </property>
   </action>
   <action name="actionSourceDown">
    <property name="enabled">
@@ -704,6 +734,9 @@
    </property>
    <property name="text">
     <string>MoveDown</string>
+   </property>
+   <property name="themeID" stdset="0">
+    <string notr="true">downArrowIconSmall</string>
    </property>
   </action>
   <action name="action_New">
