--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -32,8 +32,16 @@ QWidget {
     color: rgb(225,224,225); /* veryLight */
     selection-background-color: rgb(42,130,218); /* blue */
     selection-color: black;
-
 }
+
+QWidget::disabled {
+    color: 2px solid rgb(190,190,190); /* light */
+}
+
+QGroupBox {
+    border: 2px solid rgb(122,121,122); /* light */
+}
+
 
 /* ScrollBars */
 
@@ -107,7 +115,6 @@ QToolTip {
 
 QMenuBar::item {
     background-color: rgb(58,57,58); /* dark */
-    border: none;
 }
 
 QToolBar {
@@ -118,6 +125,38 @@ QToolBar {
 QToolButton:hover {
     border: 1px solid rgb(42,130,218); /* blue */
 }
+
+
+/* Tab Widget */
+
+QTabWidget::pane { /* The tab widget frame */
+    border-top: 2px solid rgb(31,30,31); /* veryDark */
+    position: absolute;
+    top: -0.5em;
+}
+
+QTabWidget::tab-bar {
+    alignment: center;
+}
+
+QTabBar::tab {
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
+    border: 2px solid rgb(31,30,31); /* veryDark */
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    min-width: 8ex;
+    padding: 2px;
+}
+
+QTabBar::tab:selected, QTabBar::tab:hover {
+    background-color: rgb(122,121,122); /* light */
+    color: black;
+}
+
+QTabBar::tab:selected {
+    border-color: #9B9B9B;
+}
+
 
 /* ComboBox */
 
@@ -139,7 +178,7 @@ QComboBox::drop-down {
 
 QComboBox::down-arrow {
     qproperty-alignment: AlignTop;
-    image: url(:/res/images/updown.png);
+    image: url(./Dark/updown.png);
     width: 100%;
 }
 
@@ -151,6 +190,7 @@ QComboBox:on {
 
 QLineEdit, QTextEdit, QPlainTextEdit {
     background-color: rgb(31,30,31); /* veryDark */
+    border: none;
     padding-left: 2px;
 }
 
@@ -204,15 +244,14 @@ QDoubleSpinBox::up-button:disabled, QDoubleSpinBox::up-button:off, QDoubleSpinBo
 }
 
 QSpinBox::up-arrow, QDoubleSpinBox::up-arrow {
-    image: url(:/res/images/up_arrow.png);
+    image: url(./Dark/up_arrow.png);
     width: 100%;
 }
 
 QSpinBox::down-arrow, QDoubleSpinBox::down-arrow {
-    image: url(:/res/images/down_arrow.png);
+    image: url(./Dark/down_arrow.png);
     width: 100%;
 }
-
 
 
 /* Buttons */
@@ -223,8 +262,12 @@ QPushButton {
     border: none;
     border-radius: 3px;
     padding: 4px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+QPushButton::flat {
+    background-color: rgb(58,57,58); /* dark */
 }
 
 QPushButton:hover {
@@ -234,4 +277,33 @@ QPushButton:hover {
 
 QPushButton:pressed {
     background-color: rgb(31,30,31); /* veryDark */
+}
+
+
+/* Sliders */
+
+QSlider::groove:horizontal {
+    background-color: #2b3034;
+    height: 4px;
+    border: 0px;
+}
+
+QSlider::handle:horizontal {
+    height: 4px;
+    border: 1px solid #d8d8d8;
+    width: 18px;
+}
+
+QSlider::handle:hover {
+    background-color: #8e9eac;
+}
+
+
+/* Volume Control */
+
+VolumeMeter {
+    qproperty-bkColor: #1e2327;
+    qproperty-magColor:;
+    qproperty-peakColor:;
+    qproperty-peakHoldColor:#d8d8d8;
 }
