--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -281,7 +281,7 @@
              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
             </property>
             <item row="0" column="0">
-             <widget class="QLabel" name="label_16">
+             <widget class="QLabel" name="outputModeLabel">
               <property name="minimumSize">
                <size>
                 <width>170</width>
@@ -2336,8 +2336,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>430</width>
-              <height>254</height>
+              <width>322</width>
+              <height>210</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_16">
