UI: View Log menu entry in Help -> Log Files menu
Since the file being logged to changes with each run, opening a log
file is a tad more involved than desirable when it's necessary to view
the log each time OBS is run. This new menu entry shortcuts opening the
file from the file system manually.

--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -581,6 +581,7 @@
      <addaction name="actionShowLogs"/>
      <addaction name="actionUploadCurrentLog"/>
      <addaction name="actionUploadLastLog"/>
+     <addaction name="actionViewCurrentLog"/>
     </widget>
     <addaction name="menuLogFiles"/>
     <addaction name="actionCheckForUpdates"/>
@@ -804,6 +805,11 @@
   <action name="actionUploadCurrentLog">
    <property name="text">
     <string>Basic.MainMenu.Help.Logs.UploadCurrentLog</string>
+   </property>
+  </action>
+  <action name="actionViewCurrentLog">
+   <property name="text">
+    <string>Basic.MainMenu.Help.Logs.ViewCurrentLog</string>
    </property>
   </action>
   <action name="actionUndo">
