--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -19,10 +19,12 @@
 /* Colors */
 
 /* rgb(225,224,225); /* veryLight */
+/* rgb(200,199,200); /* lighter */
 /* rgb(122,121,122); /* light */
 /* rgb(88,87,88); /* kindaDark */
 /* rgb(58,57,58); /* dark */
 /* rgb(31,30,31); /* veryDark */
+/* rgb(11,10,11); /* veryVeryDark */
 /* rgb(42,130,218); /* blue */
 
 
@@ -35,12 +37,13 @@ QWidget {
     selection-color: black;
 }
 
-QWidget::disabled {
-    color: 2px solid rgb(190,190,190); /* light */
-}
+
+/* Group Box */
 
 QGroupBox {
-    border: 2px solid rgb(122,121,122); /* light */
+    border: 1px solid rgb(31,30,31); /* veryDark */;
+    border-radius: 5px;
+    padding-top: 16px;
 }
 
 
@@ -77,7 +80,7 @@ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical, QScrollBar::add-
 }
 
 QScrollBar:horizontal {
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #121212, stop: 1 #282828);
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #121212, stop: 1 #282828);
     height: 12px;
     /*margin: 16px 0 16px 0;*/
     border: 1px solid rgb(31,30,31); /* veryDark */
@@ -86,7 +89,7 @@ QScrollBar:horizontal {
 QScrollBar::handle:horizontal {
     background: rgb(88,87,88); /* kindaDark */
     min-width: 20px;
-    border-radius: 3px;
+    border-radius: 5px;
     border-width: 1px;
     border: 1px solid rgb(31,30,31); /* veryDark */
 }
@@ -154,9 +157,7 @@ QToolButton[text="Basic.Main.MoveDown"], QToolButton[text="Move Down"] {
 /* Tab Widget */
 
 QTabWidget::pane { /* The tab widget frame */
-    border-top: 2px solid rgb(31,30,31); /* veryDark */
-    position: absolute;
-    top: -0.5em;
+    border-top: 1px solid rgb(31,30,31); /* veryDark */
 }
 
 QTabWidget::tab-bar {
@@ -164,21 +165,28 @@ QTabWidget::tab-bar {
 }
 
 QTabBar::tab {
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
-    border: 2px solid rgb(31,30,31); /* veryDark */
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    background-color: rgb(31,30,31); /* veryDark */
+    border: none;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     min-width: 8ex;
-    padding: 2px;
-}
-
-QTabBar::tab:selected, QTabBar::tab:hover {
-    background-color: rgb(122,121,122); /* light */
-    color: black;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 1px;
 }
 
 QTabBar::tab:selected {
-    border-color: #9B9B9B;
+    background-color: rgb(122,121,122); /* light */
+}
+
+QTabBar::tab:hover {
+    background-color: rgb(122,121,122); /* light */
+}
+
+QTabBar::tab:pressed {
+    background-color: rgb(11,10,11); /* veryVeryDark */
 }
 
 
@@ -300,7 +308,6 @@ QPushButton::flat {
 
 QPushButton:hover {
     background-color: rgb(122,121,122); /* light */
-    /*border: 1px solid rgb(42, 130, 218);*/
 }
 
 QPushButton:pressed {
@@ -310,20 +317,35 @@ QPushButton:pressed {
 
 /* Sliders */
 
-QSlider::groove:horizontal {
-    background-color: #2b3034;
+QSlider::groove {
+    background-color: rgb(31,30,31); /* veryDark */
     height: 4px;
     border: 0px;
 }
 
-QSlider::handle:horizontal {
-    height: 4px;
-    border: 1px solid #d8d8d8;
+QSlider::handle {
+    background-color: rgb(200,199,200); /* lighter */
+    border: 0px;
+    border-radius: 3px;
+    height: 10px;
     width: 18px;
+    margin: -2px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
 }
 
 QSlider::handle:hover {
-    background-color: #8e9eac;
+    background-color: rgb(225,224,225); /* veryLight */
+}
+
+QSlider::sub-page {
+    background-color: rgb(42,130,218); /* blue */
+}
+
+QSlider::sub-page:disabled {
+    background-color: rgb(31,30,31); /* veryDark */
+}
+
+QSlider::handle:disabled {
+    background-color: rgb(122,121,122); /* light */
 }
 
 
