--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -38,6 +38,26 @@ QWidget {
 }
 
 
+/* Misc */
+
+QWidget::disabled {
+    color: 2px solid rgb(200,199,200); /* lighter */
+}
+
+QAbstractItemView {
+    background-color: rgb(31,30,31); /* veryDark */
+}
+
+QToolTip {
+    background-color: rgb(31,30,31); /* veryDark */
+    color: rgb(205,205,205);
+}
+
+QMenuBar::item {
+    background-color: rgb(58,57,58); /* dark */
+}
+
+
 /* Group Box */
 
 QGroupBox {
@@ -55,14 +75,20 @@ QGroupBox {
 }
 
 QScrollBar:vertical {
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #121212, stop: 1 #282828);
-    width: 12px;
-    border: 1px solid rgb(31,30,31); /* veryDark */
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2: 0,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(54, 53, 54),
+        stop: 1 rgb(58,57,58)); /* dark */
+    width: 14px;
 }
 
 QScrollBar::handle:vertical {
-    background: rgb(88,87,88); /* kindaDark */
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2: 0,
+        stop: 0 rgb(122,121,122), /* light */
+        stop: 0.25 rgb(100, 99, 100),
+        stop: 1 rgb(88,87,88)); /* kindaDark */
     min-height: 20px;
+    margin: 2px;
     border-radius: 5px;
     border-width: 1px;
     border: 1px solid rgb(31,30,31); /* veryDark */
@@ -80,15 +106,20 @@ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical, QScrollBar::add-
 }
 
 QScrollBar:horizontal {
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #121212, stop: 1 #282828);
-    height: 12px;
-    /*margin: 16px 0 16px 0;*/
-    border: 1px solid rgb(31,30,31); /* veryDark */
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 0, y2: 1,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(54, 53, 54),
+        stop: 1 rgb(58,57,58)); /* dark */
+    height: 14px;
 }
 
 QScrollBar::handle:horizontal {
-    background: rgb(88,87,88); /* kindaDark */
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 0, y2: 1,
+        stop: 0 rgb(122,121,122), /* light */
+        stop: 0.25 rgb(100, 99, 100),
+        stop: 1 rgb(88,87,88)); /* kindaDark */
     min-width: 20px;
+    margin: 2px;
     border-radius: 5px;
     border-width: 1px;
     border: 1px solid rgb(31,30,31); /* veryDark */
@@ -106,22 +137,6 @@ QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal, QScrollBa
 }
 
 
-/* Lists */
-
-QAbstractItemView {
-    background-color: rgb(31,30,31); /* veryDark */
-}
-
-QToolTip {
-    background-color: rgb(31,30,31); /* veryDark */
-    color: rgb(205,205,205);
-}
-
-QMenuBar::item {
-    background-color: rgb(58,57,58); /* dark */
-}
-
-
 /* Scenes and Sources toolbar */
 
 QToolBar {
@@ -130,7 +145,13 @@ QToolBar {
 }
 
 QToolButton:hover {
-    border: 1px solid rgb(42,130,218); /* blue */
+    background-color: rgb(122,121,122); /* light */
+    border-radius: none;
+}
+
+QToolButton:pressed {
+    background-color: rgb(31,30,31); /* veryDark */
+    border-radius: none;
 }
 
 * [themeID="actionAddScene"], * [themeID="actionAddSource"] {
@@ -165,7 +186,7 @@ QTabWidget::tab-bar {
 }
 
 QTabBar::tab {
-    background-color: rgb(31,30,31); /* veryDark */
+    background-color: rgb(88,87,88); /* kindaDark */
     border: none;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -178,7 +199,7 @@ QTabBar::tab {
 }
 
 QTabBar::tab:selected {
-    background-color: rgb(122,121,122); /* light */
+    background-color: rgb(31,30,31); /* veryDark */
 }
 
 QTabBar::tab:hover {
@@ -186,7 +207,7 @@ QTabBar::tab:hover {
 }
 
 QTabBar::tab:pressed {
-    background-color: rgb(11,10,11); /* veryVeryDark */
+    background-color: rgb(31,30,31); /* veryDark */
 }
 
 
@@ -317,31 +338,83 @@ QPushButton:pressed {
 
 /* Sliders */
 
-QSlider::groove {
-    background-color: rgb(31,30,31); /* veryDark */
+QSlider::groove:horizontal {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 0, y2: 1,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(50, 49, 50));
     height: 4px;
-    border: 0px;
+    border: none;
+    border-radius: 2px;
 }
 
-QSlider::handle {
-    background-color: rgb(200,199,200); /* lighter */
-    border: 0px;
+QSlider::handle:horizontal {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 0, y2: 1,
+        stop: 0 rgb(240,239,240), /* lighter */
+        stop: 0.25 rgb(200,199,200),
+        stop: 1 rgb(162,161,162)); /* light */
+    border: 1px solid rgb(58,57,58); /* dark */
     border-radius: 3px;
     height: 10px;
     width: 18px;
-    margin: -2px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+    margin: -3px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+}
+
+QSlider::handle:horizontal:pressed {
+    background-color: QLinearGradient(x1: 0, y1: 1, x2: 0, y2: 0,
+        stop: 0 rgb(240,239,240), /* lighter */
+        stop: 0.25 rgb(200,199,200),
+        stop: 1 rgb(162,161,162)); /* light */
+}
+
+QSlider::sub-page:horizontal:disabled {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 0, y2: 1,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(50, 49, 50));
+    border-radius: 2px;
+}
+
+QSlider::groove:vertical {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2: 0,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(50, 49, 50));
+    width: 4px;
+    border: none;
+    border-radius: 2px;
+}
+
+QSlider::handle:vertical {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2: 0,
+        stop: 0 rgb(240,239,240), /* lighter */
+        stop: 0.25 rgb(200,199,200),
+        stop: 1 rgb(162,161,162)); /* light */
+    border: 1px solid rgb(58,57,58); /* dark */
+    border-radius: 4px;
+    width: 10px;
+    height: 18px;
+    margin: -3px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+}
+
+QSlider::handle:vertical:pressed {
+    background-color: QLinearGradient(x1: 1, y1: 0, x2: 0, y2: 0,
+        stop: 0 rgb(240,239,240), /* lighter */
+        stop: 0.25 rgb(200,199,200),
+        stop: 1 rgb(162,161,162)); /* light */
+}
+
+QSlider::sub-page:vertical:disabled {
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2: 0,
+        stop: 0 rgb(31,30,31), /* veryDark */
+        stop: 0.75 rgb(50, 49, 50));
+    border-radius: 2px;
 }
 
 QSlider::handle:hover {
-    background-color: rgb(225,224,225); /* veryLight */
+    background-color: rgb(200,199,200); /* veryLight */
 }
 
 QSlider::sub-page {
     background-color: rgb(42,130,218); /* blue */
-}
-
-QSlider::sub-page:disabled {
-    background-color: rgb(31,30,31); /* veryDark */
+    border-radius: 2px;
 }
 
 QSlider::handle:disabled {
@@ -352,8 +425,8 @@ QSlider::handle:disabled {
 /* Volume Control */
 
 VolumeMeter {
-    qproperty-bkColor: #1e2327;
+    qproperty-bkColor: rgb(31,30,31); /* veryDark */
     qproperty-magColor:;
     qproperty-peakColor:;
-    qproperty-peakHoldColor:#d8d8d8;
+    qproperty-peakHoldColor: rgb(225,224,225); /* veryLight */
 }
