UI: Add ability to change settings icons
Since it is impossible to access QListWidgetItems individually, using
the different types of Qt css selectors, I added the possibility.

The css used looks standard, but isn't. I parse the qss file upon theme
loading, and will initialize the needed icons. There is actually some
leeway in how the theme can format the icon sections, but most of it
breaks Qt's parser instead of ours.

The icons are created and set statically inside the theme class, since
there is no guarantee it will be loaded when we read a theme.

--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -422,6 +422,36 @@ QSlider::handle:disabled {
 }
 
 
+/* Settings Icons */
+/* This EXACT style and layout has to be used, since this section isn't part of Qt css. */
+/* Of course the url is arbitrary. Copy paste this and ONLY change the url. */
+/* Path is relative to .qss file. */
+
+#GeneralIcon {
+    icon: url(./Dark/settings/general.png);
+}
+
+#StreamIcon {
+    icon: url(./Dark/settings/stream.png);
+}
+
+#OutputIcon {
+    icon: url(./Dark/settings/output.png);
+}
+
+#AudioIcon {
+    icon: url(./Dark/settings/audio.png);
+}
+
+#VideoIcon {
+    icon: url(./Dark/settings/video.png);
+}
+
+#AdvancedIcon {
+    icon: url(./Dark/settings/advanced.png);
+}
+
+
 /* Volume Control */
 
 VolumeMeter {
