--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -37,6 +37,10 @@ QWidget {
     selection-color: black;
 }
 
+* [frameShape="1"], * [frameShape="2"], * [frameShape="3"], * [frameShape="4"], * [frameShape="5"], * [frameShape="5"] {
+    border: 1px solid rgb(31,30,31);
+}
+
 
 /* Misc */
 
@@ -454,4 +458,11 @@ VolumeMeter {
     qproperty-magColor:;
     qproperty-peakColor:;
     qproperty-peakHoldColor: rgb(225,224,225); /* veryLight */
+}
+
+
+/* Status Bar */
+
+QStatusBar::item {
+    border: none;
 }
