UI: Add 'visibility' checkbox
This checkbox gives an 'eye' icon that indicates whether something is
visible or not.  The color of the icon is influenced by the current
style's foreground color.

--- a/obs/forms/obs.qrc
+++ b/obs/forms/obs.qrc
@@ -1,6 +1,8 @@
 <RCC>
   <qresource prefix="/res">
     <file>images/configuration21_16.png</file>
+    <file>images/invisible_mask.png</file>
+    <file>images/visible_mask.png</file>
     <file>images/list_remove.png</file>
     <file>images/add.png</file>
     <file>images/down.png</file>
