--- a/obs/forms/obs.qrc
+++ b/obs/forms/obs.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="/res">
+    <file>images/mute.png</file>
+    <file>images/unmute.png</file>
     <file>images/configuration21_16.png</file>
     <file>images/invisible_mask.png</file>
     <file>images/visible_mask.png</file>
