--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -1241,13 +1241,20 @@
                       </layout>
                      </item>
                      <item row="1" column="0">
+                      <widget class="QLabel" name="label_16">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.Format</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="0">
                       <widget class="QLabel" name="label_40">
                        <property name="text">
                         <string>Basic.Settings.Output.VideoBitrate</string>
                        </property>
                       </widget>
                      </item>
-                     <item row="1" column="1">
+                     <item row="3" column="1">
                       <widget class="QSpinBox" name="advOutFFVBitrate">
                        <property name="minimum">
                         <number>0</number>
@@ -1260,77 +1267,7 @@
                        </property>
                       </widget>
                      </item>
-                     <item row="3" column="0">
-                      <widget class="QLabel" name="label_37">
-                       <property name="text">
-                        <string>Basic.Settings.Output.Adv.FFmpeg.VEncoder</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="3" column="1">
-                      <widget class="QLineEdit" name="advOutFFVEncoder"/>
-                     </item>
                      <item row="4" column="0">
-                      <widget class="QLabel" name="label_38">
-                       <property name="text">
-                        <string>Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="4" column="1">
-                      <widget class="QLineEdit" name="advOutFFVCfg"/>
-                     </item>
-                     <item row="5" column="0">
-                      <widget class="QLabel" name="label_41">
-                       <property name="text">
-                        <string>Basic.Settings.Output.AudioBitrate</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="5" column="1">
-                      <widget class="QSpinBox" name="advOutFFABitrate">
-                       <property name="minimum">
-                        <number>32</number>
-                       </property>
-                       <property name="maximum">
-                        <number>4096</number>
-                       </property>
-                       <property name="singleStep">
-                        <number>16</number>
-                       </property>
-                       <property name="value">
-                        <number>128</number>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="6" column="0">
-                      <widget class="QLabel" name="label_47">
-                       <property name="text">
-                        <string>Basic.Settings.Output.Adv.AudioTrack</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="7" column="0">
-                      <widget class="QLabel" name="label_39">
-                       <property name="text">
-                        <string>Basic.Settings.Output.Adv.FFmpeg.AEncoder</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="7" column="1">
-                      <widget class="QLineEdit" name="advOutFFAEncoder"/>
-                     </item>
-                     <item row="8" column="0">
-                      <widget class="QLabel" name="label_46">
-                       <property name="text">
-                        <string>Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="8" column="1">
-                      <widget class="QLineEdit" name="advOutFFACfg"/>
-                     </item>
-                     <item row="2" column="0">
                       <widget class="QCheckBox" name="advOutFFUseRescale">
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -1346,7 +1283,7 @@
                        </property>
                       </widget>
                      </item>
-                     <item row="2" column="1">
+                     <item row="4" column="1">
                       <widget class="QComboBox" name="advOutFFRescale">
                        <property name="enabled">
                         <bool>false</bool>
@@ -1356,7 +1293,57 @@
                        </property>
                       </widget>
                      </item>
+                     <item row="5" column="0">
+                      <widget class="QLabel" name="label_37">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.VEncoder</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="5" column="1">
+                      <widget class="QComboBox" name="advOutFFVEncoder"/>
+                     </item>
+                     <item row="6" column="0">
+                      <widget class="QLabel" name="label_38">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings</string>
+                       </property>
+                      </widget>
+                     </item>
                      <item row="6" column="1">
+                      <widget class="QLineEdit" name="advOutFFVCfg"/>
+                     </item>
+                     <item row="7" column="0">
+                      <widget class="QLabel" name="label_41">
+                       <property name="text">
+                        <string>Basic.Settings.Output.AudioBitrate</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="7" column="1">
+                      <widget class="QSpinBox" name="advOutFFABitrate">
+                       <property name="minimum">
+                        <number>32</number>
+                       </property>
+                       <property name="maximum">
+                        <number>4096</number>
+                       </property>
+                       <property name="singleStep">
+                        <number>16</number>
+                       </property>
+                       <property name="value">
+                        <number>128</number>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="8" column="0">
+                      <widget class="QLabel" name="label_47">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.AudioTrack</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="8" column="1">
                       <widget class="QWidget" name="widget_10" native="true">
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -1410,6 +1397,43 @@
                         </item>
                        </layout>
                       </widget>
+                     </item>
+                     <item row="9" column="0">
+                      <widget class="QLabel" name="label_39">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.AEncoder</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="10" column="0">
+                      <widget class="QLabel" name="label_46">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="10" column="1">
+                      <widget class="QLineEdit" name="advOutFFACfg"/>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QComboBox" name="advOutFFFormat"/>
+                     </item>
+                     <item row="2" column="1">
+                      <widget class="QLabel" name="advOutFFFormatDesc">
+                       <property name="text">
+                        <string/>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QLabel" name="label_44">
+                       <property name="text">
+                        <string>Basic.Settings.Output.Adv.FFmpeg.FormatDesc</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="9" column="1">
+                      <widget class="QComboBox" name="advOutFFAEncoder"/>
                      </item>
                     </layout>
                    </widget>
