UI: Fix dark theme QToolTip colors on windows
QToolTip's (background) color(s) would not apply on windows, work-around
taken from https://forum.qt.io/topic/24023/

--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -55,6 +55,7 @@ QAbstractItemView {
 QToolTip {
     background-color: rgb(31,30,31); /* veryDark */
     color: rgb(205,205,205);
+    border: none;
 }
 
 QMenuBar::item {
