--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -370,6 +370,10 @@ QPushButton:pressed {
     background-color: rgb(31,30,31); /* veryDark */
 }
 
+QPushButton:checked {
+    background-color: rgb(122,121,122); /* light */
+}
+
 
 /* Sliders */
 
