UI: Add warning if using no/multiple tracks
Certain output formats don't support multiple tracks, so it's important
to warn the user if they select multiple tracks.

Also warn the user if they select no tracks.

--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -495,3 +495,16 @@ MuteCheckBox::indicator:unchecked {
 OBSHotkeyLabel[hotkeyPairHover=true] {
     color: red;
 }
+
+
+/* Label warning/error */
+
+QLabel#warningLabel {
+    color: rgb(192, 128, 0);
+    font-weight: bold;
+}
+
+QLabel#errorLabel {
+    color: rgb(192, 0, 0);
+    font-weight: bold;
+}
