UI: Add workaround for drag&drop removing items with Qt-5.4/win
Workaround taken from <http://stackoverflow.com/a/30291775>,
potentially relevant Qt bug:
<https://bugreports.qt.io/browse/QTBUG-45365>

--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -382,7 +382,7 @@
                 <enum>QAbstractItemView::ExtendedSelection</enum>
                </property>
                <property name="defaultDropAction">
-                <enum>Qt::IgnoreAction</enum>
+                <enum>Qt::TargetMoveAction</enum>
                </property>
               <addaction name="actionRemoveSource"/>
              </widget>
@@ -498,7 +498,7 @@
                <enum>QAbstractItemView::InternalMove</enum>
               </property>
               <property name="defaultDropAction">
-               <enum>Qt::IgnoreAction</enum>
+               <enum>Qt::TargetMoveAction</enum>
               </property>
               <addaction name="actionRemoveScene"/>
              </widget>
